tests/apply/out.txt
error: mismatched types: expected unit, found ('t29 -> 't30) * 't29 -> 't30
  ┌─ err.sml:2:1
  │
2 │ val _: unit = apply
  │ ^^^^^^^^^^^^^^^^^^^

typechecking failed
